--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,6 +20,11 @@ const pageTitle = "About Me";
 	love and passion is a trait I love to see in others. I think everyone should talk about 
 	the things that make their eyes light up and their hearts sing without fear of being 
 	cringe.</p>
+	<div class="divider" style="padding-left:4em">
+		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
+		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
+		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
+		</div>
 	<h1>My Work</h1>
 	<p>As you could probably tell from my list of hobbies, I work in a lot of different mediums. 
 	Sometimes something is in one medium because I can't conceive of it in any other form, 
@@ -35,11 +40,11 @@ const pageTitle = "About Me";
 	to ephemerality of platforms (the fact that they won't be around forever) I'll be adding newer 
 	stuff here as well, when possible. (My host is quite generous but some things will just be too 
 	big to handle).</p>
-	<h1>I'm currently...</h1>
-	<p> Reading: This Princess Kills Monsters and Indie Games From Dream to Delivery </p>
-	<p> Listening to: Ado's Best Adobum </p>
-	<p> Playing: Patapon 1 </p>
-	<p> Studying: Data Structures and Algorithms and C++ </p>
+	<div class="divider" style="padding-left:4em">
+		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
+		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
+		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
+		</div>
 	<h1>My Favorites</h1>
 	<p> Genres: mystery, death game, horror, slice of life, dystopian, fantasy, mythology/folklore</p>
 	<p> Games/Puzzles: Danganronpa, Dragon Quest, Professor Layton series, Rhythm Heaven series, Picross, Logic grid, MURDLE
@@ -79,47 +84,13 @@ const pageTitle = "About Me";
 		font-weight: 700;
 		line-height: 1;
 		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: rgba(var(--accent-light), 12%);
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
+		margin-bottom: 0em;
 	}
 	.link-card-grid {
 		display: grid;
 		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
 		gap: 2rem;
 		padding: 0;
-	}
-    .indented-paragraph{
-        width: 500px;
-        max-width: calc(100% - 3rem);
-		position: relative;
-		left: 20rem;
-    }
-	h2{
-		font-size: 4rem;
 	}
 
 </style>
