--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Navigation from "./Navigation.astro"
 ---
 <header>
     <div class="header-content">
-	    <div class="header-title">Website Title</div>
+	    <div class="header-title">The Art of Gaming</div>
 	    <nav>
             <Hamburger/>
             <Navigation/>
