--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,8 @@
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <!--<a href="/games/">Games(Dead Link)</a>
-    <a href="/characters/">Characters(Dead Link)</a>
-    <a href="/works">Portfolio</a>*/-->
+    <a href="/games/">Games</a>
+    <!--
+        <a href="/characters/">Characters(Dead Link)</a>
+    -->
 </div>
