--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from 'astro:assets';
+import divider from "../ribbondivider.png";
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Header from '../components/Header.astro';
@@ -10,11 +12,24 @@ const pageTitle = "Home Page";
 
 <PersonalBaseLayout pageTitle={pageTitle}>
 		<h1>Welcome to my cozy spot on the internet!</h1>
-		
         <p>
-			This is the fun, personal side of my site where I can collect the projects I care about in one place, give updates and my personal thoughts on things. It's also a good place to collect all the different hobbies I have and hopefully make friends and find places of inspiration in a less mind-numbing way than social media and youtube. I'm taking my time on this site and kind of doing a learning in public type thing by just uploading whatever I end up finishing on days I work on this, so it'll be under construction for a long time. I hope you'll enjoy and stick with me nonetheless :).
+			This is the fun, personal side of my site where I can collect the projects I care about in one place, give updates and my personal thoughts on things. It's also a good place to collect all the different hobbies I have and hopefully make friends and find places of inspiration in a less mind-numbing way than social media and youtube. I'm taking my time on this site and kind of doing a learning in public type thing by just uploading whatever I end up finishing on days I work on this, so it'll be under construction for a long time. I hope you'll enjoy and stick with me nonetheless.
         </p>
-		
+		<div class="divider" style="padding-left:4em">
+		<img src="../foollovers-ha19-ribbon-line.gif" alt="pink lace divider">
+		<img src="../foollovers-ha19-ribbon-line.gif" alt="pink lace divider">
+		<img src="../foollovers-ha19-ribbon-line.gif" alt="pink lace divider">
+		</div>
+		<h1> A Little About My Current Projects </h1>
+		<h3> Untitled Short Horror Game</h3>
+		<p> A girl enters a life-sized doll house and what she experiences in that house is no mere child's play.</p>
+		<h3> A Wine Colored Crime Remake </h3>
+		<p> A murder mystery game goes awry, changing the mystery into one not even the host could crack. </p>
+		<h3> This Website :p</h3>
+		<p> A project where I'm learning in public. I wanted a space online to display all my work going forward so that things would be easier to track down and also more easily archivable.</p>
+
+		<p> When I make a button for linking back it will go here: </p>
+
 		<script>
 			import '../scripts/menu.js'
 		  </script>
@@ -30,25 +45,12 @@ const pageTitle = "Home Page";
 		font-size: 20px;
 		line-height: 1.6;
 	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}*/
-	img {
-    float:left;
-	padding: 2%;
+	.divider{
+		display:flex;
+		justify-content:center;
+		margin:auto;
+		text-align:center;
+		width:50%;
 	}
 	.link-card-grid {
 		display: grid;
