--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,16 +1,17 @@
 ---
-import BaseLayout from "../../layouts/PersonalBaseLayout.astro";
-const allPosts = await Astro.glob('../blog/*.md');
-const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+import PersonalBaseLayout from "../../layouts/PersonalBaseLayout.astro";
+import { getCollection } from "astro:content";
+const allPosts = await getCollection("blog");
+const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())];
 const pageTitle = "Tag(s) (You're It!)"
 ---
-<BaseLayout pageTitle={pageTitle}>
+<PersonalBaseLayout pageTitle={pageTitle}>
     <div class="tags">
         {tags.map((tag) => (
           <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
         ))}
       </div>
-</BaseLayout>
+</PersonalBaseLayout>
 <style>
   a {
     color: #00539F;
