--- a/src/layouts/PersonalBaseLayout.astro
+++ b/src/layouts/PersonalBaseLayout.astro
@@ -44,6 +44,8 @@ const { pageTitle } = Astro.props;
       <aside class="left-sidebar2">
         <div class="sidebar-title">Site Updates Feed</div>
         <div class="sidebar-section">
+            <p>10/19 - added new blog post</p>
+            <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
             <p>8/06 - edited some page decorations, added favicon, fixed footer</p>
             <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
             <p>8/05 - added decorations, added general games page and individual game page (Dungeon Generator)</p>
@@ -75,8 +77,8 @@ const { pageTitle } = Astro.props;
           <marquee>
             <div class="site-button">
           	  <p> Base layout - <a href="https://petrapixel.neocities.org/" target="_blank"><img src="https://cdn.jsdelivr.net/gh/petracoding/petrapixel.neocities.org@latest/public/img/linkback.gif" alt="petrapixel"></a>
-              Doll maker - <a href="https://dollzrevival.neocities.org/" target="_blank"><img src="../DZRButton4.gif" alt="Dollz Revival"></a>
-              Page Decoration - <a href="https://foollovers.com/" target="_blank"><img src="../foollovers8826.gif" alt="Fool Lovers"></a>
+              Doll maker - <a href="https://dollzrevival.neocities.org/" target="_blank"><img src="../../DZRButton4.gif" alt="Dollz Revival"></a>
+              Page Decoration - <a href="https://foollovers.com/" target="_blank"><img src="../../foollovers8826.gif" alt="Fool Lovers"></a>
               </p>
             </div>
           </marquee>
