--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,14 +17,14 @@ const pageTitle = "About Me";
 	writing music, programming, gaming, learning Japanese, 3d modelling, animating, and 
 	doing pixel art. I'm also learning how to make comics. I'm a very passionate person 
 	who tries to put my all into the things I love and doing what's right for the people I 
-	love and passion is a trait I love to see in others. I think everyone should talk about 
+	love. Passion is a trait I love to see in others. I think everyone should talk about 
 	the things that make their eyes light up and their hearts sing without fear of being 
 	cringe.</p>
 	<div class="divider" style="padding-left:4em">
 		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
 		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
 		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-		</div>
+	</div>
 	<h1>My Work</h1>
 	<p>As you could probably tell from my list of hobbies, I work in a lot of different mediums. 
 	Sometimes something is in one medium because I can't conceive of it in any other form, 
@@ -47,7 +47,7 @@ const pageTitle = "About Me";
 		</div>
 	<h1>My Favorites</h1>
 	<p> Genres: mystery, death game, horror, slice of life, dystopian, fantasy, mythology/folklore</p>
-	<p> Games/Puzzles: Danganronpa, Dragon Quest, Professor Layton series, Rhythm Heaven series, Picross, Logic grid, MURDLE
+	<p> Games/Puzzles: Danganronpa, Dragon Quest, Professor Layton series, Rhythm Heaven series, Picross, Logic grid puzzles, MURDLE
 	<p> Shows/Movies: The Laughing Salesman (both original and reboot), Aggretsuko, NEW GAME!, Cells at Work BLACK!</p>
 	<p> Books: Feed, The Poet X, Less, The Grace Year, Making Comics, Four Thousand Weeks Time Management for Mortals
 	<p> Music: Ado, Mili, nerdcore, J-pop, pop, pop punk, metal, punk, Vocaloid</p>
