--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -7,13 +7,13 @@ import Footer from '../components/Footer.astro';
 import '../styles/global.css'
 import Work from '../components/Work.astro';
 
-const pageTitle = "Portfolio";
+const pageTitle = "Game Store";
 const allWorks = await Astro.glob('../pages/works/*.md');
 ---
 
 <BaseLayout title={pageTitle}>
 	<main>
-        <p>This is where I keep my best projects.</p>
+        <p>This is where I keep my projects.</p>
 		
 
 		<ul role="list" class="link-card-grid">
