--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -10,11 +10,11 @@ const { frontmatter } = Astro.props;
         <slot />
     </div>
 
-    <div class="tags">
+    <!-- <div class="tags">
       {frontmatter.tags.map((tag) => (
         <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
       ))}
-    </div>
+    </div>-->
     
 </PersonalBaseLayout>
 <style>
