--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection, render } from 'astro:content';
 import MarkdownLayout from '../../layouts/MarkdownLayout.astro';
+import PersonalBaseLayout from '../../layouts/PersonalBaseLayout.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
@@ -12,6 +13,7 @@ export async function getStaticPaths() {
 const { post } = Astro.props;
 const { Content } = await render(post);
 ---
-<MarkdownLayout frontmatter={post.data}>
+
+<PersonalBaseLayout frontmatter={post.data}>
   <Content />
-</MarkdownLayout>
+</PersonalBaseLayout>
