changed index and dividers

--- a/src/layouts/PersonalBaseLayout.astro
+++ b/src/layouts/PersonalBaseLayout.astro
@@ -44,6 +44,8 @@ const { pageTitle } = Astro.props;
       <aside class="left-sidebar2">
         <div class="sidebar-title">Site Updates Feed</div>
         <div class="sidebar-section">
+            <p>11/18 - edited front page, footer, and found cool divider</p>
+            <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
             <p>10/19 - added new blog post</p>
             <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
             <p>8/06 - edited some page decorations, added favicon, fixed footer</p>
@@ -66,9 +68,7 @@ const { pageTitle } = Astro.props;
       <aside class="left-sidebar">
       <div class="sidebar-title">Currently Working On</div>
         <div class="sidebar-section">
-          <p>Unannounced Short Horror Game</p>
-          <p>A Wine Colored Crime Remake</p>
-          <p>This Website :p</p>
+          <p> Resting :p</p>
         </div>
       </aside>
       <aside class="left-sidebar3">
