--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,11 +20,7 @@ const pageTitle = "About Me";
 	love. Passion is a trait I love to see in others. I think everyone should talk about 
 	the things that make their eyes light up and their hearts sing without fear of being 
 	cringe.</p>
-	<div class="divider" style="padding-left:4em">
-		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-	</div>
+	<div class="divider" style="padding-left:4em"></div>
 	<h1>My Work</h1>
 	<p>As you could probably tell from my list of hobbies, I work in a lot of different mediums. 
 	Sometimes something is in one medium because I can't conceive of it in any other form, 
