--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,4 @@
 ---
-import { Image } from 'astro:assets';
-import divider from "../ribbondivider.png";
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
-import Header from '../components/Header.astro';
 import '../styles/global.css'
 import PersonalBaseLayout from '../layouts/PersonalBaseLayout.astro';
 
@@ -15,47 +10,23 @@ const pageTitle = "Home Page";
         <p>
 			This is the fun, personal side of my site where I can collect the projects I care about in one place, give updates and my personal thoughts on things. It's also a good place to collect all the different hobbies I have and hopefully make friends and find places of inspiration in a less mind-numbing way than social media and youtube. I'm taking my time on this site and kind of doing a learning in public type thing by just uploading whatever I end up finishing on days I work on this, so it'll be under construction for a long time. I hope you'll enjoy and stick with me nonetheless.
         </p>
-		<div class="divider" style="padding-left:4em">
-		<img src="../foollovers-ha19-ribbon-line.gif" alt="pink lace divider">
-		<img src="../foollovers-ha19-ribbon-line.gif" alt="pink lace divider">
-		<img src="../foollovers-ha19-ribbon-line.gif" alt="pink lace divider">
-		</div>
-		<h1> A Little About My Current Projects </h1>
-		<h3> Untitled Short Horror Game</h3>
-		<p> A girl enters a life-sized doll house and what she experiences in that house is no mere child's play.</p>
-		<h3> A Wine Colored Crime Remake </h3>
-		<p> A murder mystery game goes awry, changing the mystery into one not even the host could crack. </p>
-		<h3> This Website :p</h3>
-		<p> A project where I'm learning in public. I wanted a space online to display all my work going forward so that things would be easier to track down and also more easily archivable.</p>
-
-		<p> When I make a button for linking back it will go here: </p>
-
+		<div class="divider" style="padding-left:4em"></div>
+		<h1> Currently... </h1>
+		<p> ???</p>
+		<div class="divider" style="padding-left:4em"></div>
+		<h1> Sneak Peek </h1>
+		<h5> From my horror draft: </h5>
+		<p>"POLLY - That’s not water! <br>
+			While the bathtub fills, steam begins fogging up the room.<br>
+			POLLY - Um, excuse me something’s wrong with your water!<br>
+			Polly goes to the door and tries to open it, but the door is locked.<br>
+			POLLY - Does it only unlock on the outside?<br>
+			The steam gets thicker."
+		</p>
+		<h4>From my remake of A Wine Colored Crime:</h4>
+		<p>"She was a photographer. No she wouldn’t take their picture, or their mom’s picture, or just do a little favor and do their niece’s quince for free."</p>
 		<script>
 			import '../scripts/menu.js'
-		  </script>
-	
+		</script>
 </PersonalBaseLayout>
 
-<style>
-	/*main {
-		margin: auto;
-		padding: 1%;
-		width: 800px;
-		max-width: calc(100% - 1%);
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.divider{
-		display:flex;
-		justify-content:center;
-		margin:auto;
-		text-align:center;
-		width:50%;
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
