--- a/src/pages/characters.astro
+++ b/src/pages/characters.astro
@@ -13,14 +13,9 @@ const pageTitle = "My Games";
 <PersonalBaseLayout pageTitle={pageTitle}>
 		<h1>Character Catalog</h1>
 		
-        <h1>HotWR House of the Wilted Rose</h1>
-        <p> Unannounced Horror Game  - no page up for it yet but it's a RPGmaker horror inspired game I've been wanting to make since I was in middle school. More details and the game itself coming by Q1 2026</p>
-        <p> A Wine Colored Crime Remake - no page yet. A remake of the demo for and a finished version of my <a href="https://theartofgaming.itch.io/a-wine-colored-crime">Nanoreno 2019 project</a>. Release date as of yet unknown</p>
-        <h1>In Development but in a demo-able state</h1>
-        <p> <a href="/games/dungen/">Dungeon Generator</a> - a browser dungeon generator made with Kenney assets in a few days for Ludum Dare! </p>
-        <p>
-			Looking for a project that's not listed here? It's probably an older project up on my <a href="https://theartofgaming.itch.io">Itch.io</a> near the bottom!
-        </p>
+		<h2>Fandom OCs</h2>
+		<h2>Original OCs</h2>
+		
 		<script>
 			import '../scripts/menu.js'
 		  </script>
