--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -2,21 +2,27 @@
 import { getCollection, render } from "astro:content";
 import PersonalBaseLayout from '../layouts/PersonalBaseLayout.astro';
 const pageTitle = "My Games";
-const allPosts = await getCollection("blog");
+import Card from '../components/Card.astro';
 const allGames = await getCollection('games');
 ---
 
 <PersonalBaseLayout pageTitle={pageTitle}>
 		<h1>All My Games and Interactive Things Post 2024</h1>
 
-		<h1>Done/Done for now</h1>
-		<p> <a href="/games/dungen/">Dungeon Generator</a> - a browser dungeon generator made with Kenney assets in a few days for Ludum Dare! </p>
-        
-		<h1>In Development but not presentation ready</h1>
-        <p> Unannounced Horror Game  - no page up for it yet but it's a RPGmaker horror inspired game I've been wanting to make since I was in middle school. More details and the game itself coming by Q1 2025</p>
-        <p> A Wine Colored Crime Remake - no page yet. A remake of the demo for and a finished version of my <a href="https://theartofgaming.itch.io/a-wine-colored-crime">Nanoreno 2019 project</a>. Release date as of yet unknown</p>
-        <p> DS Game Project </p>
-		<p> Otomodachi </p>
+		<ul role="list" class="link-card-grid">
+				{allGames.sort((a,b) => {
+					return Date.parse(b.data.pubDate.toLocaleDateString()) - Date.parse(a.data.pubDate.toLocaleDateString())
+					}
+				).map((game) => <Card
+				pubDate={game.data.pubDate}
+				title={game.data.title}
+				body={game.data.description}
+				url={`../games/${game.id}/`}
+				image={game.data.image.url}
+				/>)}
+				
+			</ul>
+		
 		<p>
 			Looking for a project that's not listed here? It's probably an older project up on my <a href="https://theartofgaming.itch.io">Itch.io</a> near the bottom!
         </p>
