added custom 404, slight updates and character hub setup

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,18 +36,16 @@ const pageTitle = "About Me";
 	to ephemerality of platforms (the fact that they won't be around forever) I'll be adding newer 
 	stuff here as well, when possible. (My host is quite generous but some things will just be too 
 	big to handle).</p>
-	<div class="divider" style="padding-left:4em">
-		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-		<img src="../foollovers-o13-lace-line.gif" alt="pink lace divider">
-		</div>
+	<div class="divider" style="padding-left:4em"></div>
 	<h1>My Favorites</h1>
 	<p> Genres: mystery, death game, horror, slice of life, dystopian, fantasy, mythology/folklore</p>
 	<p> Games/Puzzles: Danganronpa, Dragon Quest, Professor Layton series, Rhythm Heaven series, Picross, Logic grid puzzles, MURDLE
 	<p> Shows/Movies: The Laughing Salesman (both original and reboot), Aggretsuko, NEW GAME!, Cells at Work BLACK!</p>
 	<p> Books: Feed, The Poet X, Less, The Grace Year, Making Comics, Four Thousand Weeks Time Management for Mortals
 	<p> Music: Ado, Mili, nerdcore, J-pop, pop, pop punk, metal, punk, Vocaloid</p>
-
+	<div class="divider" style="padding-left:4em"></div>
+	<h1>Social Media</h1>
+	<a href={`https://bsky.app/profile/theartofgaming.bsky.social`}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-brands fa-bluesky"></i></span></a>
 		<script>
 			import '../scripts/menu.js'
 		  </script>
