--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
 <footer>
-    <a href={`https://bsky.app/profile/theartofgaming.bsky.social`}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-brands fa-bluesky"></i></span></a>
+   © 2025 TheArtofGaming 
 </footer>
