added now page, fixed up index and about

--- a/src/layouts/PersonalBaseLayout.astro
+++ b/src/layouts/PersonalBaseLayout.astro
@@ -44,6 +44,10 @@ const { pageTitle } = Astro.props;
       <aside class="left-sidebar2">
         <div class="sidebar-title">Site Updates Feed</div>
         <div class="sidebar-section">
+            <p>12/24 - added /now page</p>
+            <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
+            <p>12/17 - added new blogs</p>
+            <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
             <p>11/18 - edited front page, footer, and found cool divider</p>
             <img src="/foollovers-h01-ribbon-line.gif" alt="pink divider with bows" width="162">
             <p>10/19 - added new blog post</p>
@@ -91,6 +95,8 @@ const { pageTitle } = Astro.props;
           <ul>
             <li>Set up RSS feed</li>
             <li>Add Character Hub</li>
+            <li>Change Games page presentation</li>
+            <li>Make Links Out page</li>
           </ul>
         </div>
       </aside>
