--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -45,7 +45,7 @@ const pageTitle = "About Me";
 	<p> Music: Ado, Mili, nerdcore, J-pop, pop, pop punk, metal, punk, Vocaloid</p>
 	<div class="divider" style="padding-left:4em"></div>
 	<h1>Social Media</h1>
-	<a href={`https://bsky.app/profile/theartofgaming.bsky.social`}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-brands fa-bluesky"></i></span></a>
+	<a style="text-align: center; display:block" href={`https://bsky.app/profile/theartofgaming.bsky.social`}> <span style="font-size:xx-large; color:white; margin:auto"><i class="fa-brands fa-bluesky"></i></span></a>
 		<script>
 			import '../scripts/menu.js'
 		  </script>
