--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,6 +3,7 @@
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
     <a href="/games/">Games</a>
+    <a href="/now/">Now</a>
     <!---
         <a href="/characters/">Characters(Dead Link)</a>
     -->
